--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": "1234",
+    "password": "19950401",
     "database": "week2homework",
-    "host": "127.0.0.1",
+    "host": "express-database.cdlyzoinjxjt.ap-northeast-2.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "test": {
